--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Java Build & Test
+name: Java CI/CD Pipeline
 
 on:
   push:
@@ -7,7 +7,7 @@ on:
     branches: [ "main" ]
 
 jobs:
-  build:
+  build-and-test:
     runs-on: ubuntu-latest
 
     services:
@@ -36,15 +36,21 @@ jobs:
         
     - name: Grant execute permission for gradlew
       run: chmod +x gradlew
-      
-    - name: Build with Gradle
-      run: ./gradlew build
+
+    - name: 1. Lint Code (Checkstyle & Spotless)
+      run: ./gradlew checkstyleMain spotlessCheck
+
+    - name: 2. Build Application (Assemble)
+      run: ./gradlew assemble
+
+    - name: 3. Run Tests (Unit & Integration)
+      run: ./gradlew test
 
     - name: Publish Test Results
       uses: actions/upload-artifact@v4
       if: always()
       with:
-        name: test-results
+        name: test-reports
         path: |
           build/reports/tests/
           build/reports/checkstyle/
